@startuml
'https://plantuml.com/class-diagram

note "Flags" as Fl
LessonFrequency . Fl

enum LessonFrequency
{
    Odd = 1, 
    Even = 2, 
    Persistent = 3
}

class Lesson 
{
    + LessonFrequency Frequency
    + DateTime Begin
    + TimeSpan Span
}

class Schedule
{
    + List<Lesson> Lessons
    --
    + bool IntersectsWith(Schedule other)
}

class Student
{
    + Guid Id
    + string Name
    + Group Group
}

class Group
{
    + Guid Id
    + string Name
    + List<Student> Students
}

class Faculty 
{
    + Guid Id
    + string Name
    + List<Group> Groups
}

class Stream 
{
    + Guid Id
    + string Name
    + Schedule Schedule
    + int Capacity
    + List<Student> AssignedStudents
    + List<Student> BookedStudents
    --
    + Stream AddStudents(params Student[] students)
}

class Subject 
{
    + Guid Id
    + string Name
    + string ShortName
    + List<Stream> Streams
    --
    + Subject AddStream(int number, Schedule schedule, int capacity)
}

class SubjectFacultyGrouping
{
    + Faculty Faculty
    + List<Subject> Subjects
}

class AdditionalSubjectService
{
    - List<SubjectFacultyGrouping> Subjects
}

'
'
'

Lesson *- LessonFrequency

Schedule ||--{ Lesson

Group ||--{ Student

Faculty ||--{ Group

Stream ||--{ Student
Stream ||--|| Schedule

Subject ||--{ Stream

SubjectFacultyGrouping ||--|| Faculty
SubjectFacultyGrouping ||--{ Subject

AdditionalSubjectService ||--{ SubjectFacultyGrouping

@enduml